# CSVParser

./: CMakeLists.txt
include/: csv.h
src/: csv.cpp
tests/: csv_test.cpp  test1.csv
